website/versioned_docs/version-2.9.x/reference/subsystems/hadolint.mdx
---
title: hadolint
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A linter for Dockerfiles.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[hadolint]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]hadolint-skip`}
  env_repr='PANTS_HADOLINT_SKIP'
  default_repr={`False`}
>

Don&#x27;t use Hadolint when running `./pants lint`.

</Option>

### `args`

<Option
  cli_repr={`--hadolint-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_HADOLINT_ARGS'
  default_repr={`[]`}
>

Arguments to pass directly to Hadolint, e.g. `--hadolint-args='--format json'`.&#x27;

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--hadolint-version=<str>`}
  env_repr='PANTS_HADOLINT_VERSION'
  default_repr={`v2.6.0`}
>

Use this version of hadolint.

</Option>

### `known_versions`

<Option
  cli_repr={`--hadolint-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_HADOLINT_KNOWN_VERSIONS'
  default_repr={`[\n  "v2.6.0|macos_arm64 |7d41496bf591f2b9c7daa76d4aa1db04ea97b9e11b44a24a4e404a10aab33686|2392080",\n  "v2.6.0|macos_x86_64|7d41496bf591f2b9c7daa76d4aa1db04ea97b9e11b44a24a4e404a10aab33686|2392080",\n  "v2.6.0|linux_x86_64|152e3c3375f26711650d4e11f9e382cf1bdf3f912d7379823e8fac4b1bce88d6|5812840"\n]`}
>


Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

  - `version` is the version string
  - `platform` is one of [linux_arm64,linux_x86_64,macos_arm64,macos_x86_64],
  - `sha256` is the 64-character hex representation of the expected sha256
```
digest of the download file, as emitted by `shasum -a 256`
```

  - `length` is the expected length of the download file in bytes, as emitted by
```
`wc -c`
```

E.g., `3.1.2|macos_x86_64|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `use_unsupported_version`

<Option
  cli_repr={`--hadolint-use-unsupported-version=<UnsupportedVersionUsage>`}
  env_repr='PANTS_HADOLINT_USE_UNSUPPORTED_VERSION'
  one_of='error, warning'
  default_repr={`error`}
>


What action to take in case the requested version of hadolint is not supported.

Supported hadolint versions: unspecified

</Option>

### `url_template`

<Option
  cli_repr={`--hadolint-url-template=<str>`}
  env_repr='PANTS_HADOLINT_URL_TEMPLATE'
  default_repr={`https://github.com/hadolint/hadolint/releases/download/{version}/hadolint-{platform}`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a `file:$abspath` URL (e.g. `file:/this/is/absolute`, possibly by [templating the buildroot in a config file](https://www.pantsbuild.org/v2.9/docs/options#config-file-entries)).

Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--hadolint-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_HADOLINT_URL_PLATFORM_MAPPING'
  default_repr={`{\n  "linux_x86_64": "Linux-x86_64",\n  "macos_arm64": "Darwin-x86_64",\n  "macos_x86_64": "Darwin-x86_64"\n}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"macos_x86_64": "apple-darwin", "linux_x86_64": "unknown-linux"}, and run Pants on Linux with an intel architecture, then `&#123;platform&#125;` will be substituted in the --url-template option with unknown-linux.

</Option>

### `config`

<Option
  cli_repr={`--hadolint-config=<file_option>`}
  env_repr='PANTS_HADOLINT_CONFIG'
  default_repr={`None`}
>

Path to an YAML config file understood by Hadolint (https://github.com/hadolint/hadolint#configure).

Setting this option will disable `[hadolint].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]hadolint-config-discovery`}
  env_repr='PANTS_HADOLINT_CONFIG_DISCOVERY'
  default_repr={`True`}
>

If true, Pants will include all relevant config files during runs (`.hadolint.yaml` and `.hadolint.yml`).

Use `[hadolint].config` instead if your config is in a non-standard location.

</Option>

## Deprecated options

None

</span>